@@ -4,12 +4,20 @@ local data_util = require("__flib__/data-util")
 local libq = {}
 
 libq.qualities = {
-    { level = 1, modifier = 0, icon = lib.p.gfx .. "quality-1.png", icon_overlay = lib.p.gfx .. "quality-1-overlay.png", color = {0.73, 0.73, 0.73} },
-    { level = 2, modifier = 1, icon = lib.p.gfx .. "quality-2.png", icon_overlay = lib.p.gfx .. "quality-2-overlay.png", color = {0.24, 0.93, 0.35} },
-    { level = 3, modifier = 2, icon = lib.p.gfx .. "quality-3.png", icon_overlay = lib.p.gfx .. "quality-3-overlay.png", color = {0.13, 0.58, 1.0} },
-    { level = 4, modifier = 3, icon = lib.p.gfx .. "quality-4.png", icon_overlay = lib.p.gfx .. "quality-4-overlay.png", color = {0.77, 0.0, 1.0} },
-    { level = 5, modifier = 5, icon = lib.p.gfx .. "quality-5.png", icon_overlay = lib.p.gfx .. "quality-5-overlay.png", color = {1.0, 0.58, 0.0} },
+    { modifier = 0, color = { 0.73, 0.73, 0.73 } },
+    { modifier = 1, color = { 0.24, 0.93, 0.35 } },
+    { modifier = 2, color = { 0.13, 0.58, 1.0 } },
+    { modifier = 3, color = { 0.77, 0.0, 1.0 } },
+    { modifier = 5, color = { 1.0, 0.58, 0.0 } },
 }
+
+local overlay_modifier = settings.startup["jq-alt-overlay"].value and "-top" or ""
+
+for i, q in pairs(libq.qualities) do
+    q.level = i
+    q.icon = lib.p.gfx .. "quality-" .. i .. ".png"
+    q.icon_overlay = lib.p.gfx .. "quality-" .. i .. "-overlay" .. overlay_modifier .. ".png"
+end
 
 function libq.name_with_quality(name, quality)
     local level = type(quality) == "table" and quality.level or quality
