@@ -3,12 +3,14 @@ jq-use-extra-bonuses=Enable additional unofficial quality bonuses
 jq-show-player-programming-recipes=Show player programming recipes
 jq-quality-bonuses-import=Add extra quality bonuses by string
 jq-recycling-efficiency=Efficiency of recycling recipes
+jq-alt-overlay=Alternate item quality overlay position
 
 [mod-setting-description]
 jq-use-extra-bonuses=Enables several balanced quality bonuses that were not indicated in the quality FFF
 jq-show-player-programming-recipes=Enables machine programming with quality modules to the player (deprecated)
 jq-quality-bonuses-import=[color=yellow]Advanced feature.[/color] A simple way to add more quality bonuses. Refer to source repository for details.
 jq-recycling-efficiency=The portion of ingredients of items returned by the recycler
+jq-alt-overlay=Move the quality overlay on items to the top left
 
 [jq]
 quality-1=Normal
