@@ -6,6 +6,7 @@ Date: ???
     - Refactored mods. Energy is now checked every time. Default mod accepts table.
     - Adjusted power for inserters and beacons
     - Recycling efficiency setting
+    - Alternate item quality overlay position for better visibility on compacted belts
   Bug fixes:
     - Fixed quality armor not visible on character
 ---------------------------------------------------------------------------------------------------
